force-app/main/default/objects/Expense_Tracker__c/Expense_Tracker__c.object-meta.xml
<CustomObject>
    <label>Expense Tracker</label>
    <nameField>
        <displayFormat>E-{00}</displayFormat>
        <label>Expense Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>