force-app/main/default/objects/Expense_Tracker__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Food/Restaurants</fullName>
            </value>
            <value>
                <fullName>Vacations</fullName>
            </value>
            <value>
                <fullName>Entertainment(TV/Netflix/Internet/Movies)</fullName>
            </value>
            <value>
                <fullName>Clothes</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Medical-Co-pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>