force-app/main/default/objects/Expense_Tracker__c/fields/Special_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Special_Event_Name__c</fullName>
    <label>Special Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>