force-app/main/default/objects/Expense_Tracker__c/fields/Special_Events__c.field-meta.xml
<CustomField>
    <fullName>Special_Events__c</fullName>
    <label>Special Events</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>Festival</fullName>
            </value>
            <value>
                <fullName>Marriage day</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>