force-app/main/default/objects/Expense_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Special_Events__c</columns>
    <columns>Special_Event_Name__c</columns>
    <columns>Receipt_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Expense_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>